--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@reactivex/rxjs": "^6.6.7",
     "bootstrap": "^3.4.1",
-    "rxjs": "^7.6.0",
-    "rxjs-compat": "^6.6.7",
+    "rxjs": "^7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
