--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2020",
+    "strict": false,
     "module": "es2020",
     "lib": [
       "es2020",
